質問者の非表示 & 運営回答の更新を実装

--- a/contest/questions/index.html
+++ b/contest/questions/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/questions.css">
   <script type="module" src="/js/supabase-client.js"></script>
-  <script type="module" src="/js/redirect.js"></script> 
   <script src="/js/hamburger-menu.js" defer></script>
   <script type="module" src="/js/signup.js"></script>
   <script type="module" src="/js/question-box.js"></script>
@@ -49,10 +48,10 @@
       <h2>質問箱</h2>
 
       <label class="qa-label">タイトル</label>
-      <input id="q-title" placeholder="例：順位表の更新タイミングについて" />
+      <input id="q-title" placeholder="端的に内容を要約してください" />
 
       <label class="qa-label">質問内容</label>
-      <textarea id="q-body" placeholder="質問を書いてください"></textarea>
+      <textarea id="q-body" placeholder="質問の詳細を記述してください"></textarea>
 
       <div class="qa-actions">
         <button id="post-question" type="button" class="qa-btn"><span>送信</span></button>
