UUID取得からproblem_number取得へ変更

--- a/contest/problems/algebra/1/index.html
+++ b/contest/problems/algebra/1/index.html
@@ -4,7 +4,7 @@
   サーバーサイドレンダリング or ビルド時に各問題ページごとに差し替える。
   例: data-problem-id="xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
 -->
-<html lang="ja" data-problem-id="982b354d-e33c-4090-b675-3153012d853a">
+<html lang="ja" data-problem-number="A1">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
