--- a/contest/ranking/index.html
+++ b/contest/ranking/index.html
@@ -8,10 +8,12 @@
   <!-- 共通CSSを読み込む -->
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/ranking.css">
+  <link rel="stylesheet" href="/css/acount.css">
   <script type="module" src="/js/supabase-client.js"></script>
   <script type="module" src="/js/redirect.js"></script>
   <script src="/js/hamburger-menu.js" defer></script>
   <script type="module" src="/js/signup.js"></script>
+  <script type="module" src="/js/ranking.js"></script>
 </head>
 
 <body class="ranking-bg">
@@ -44,10 +46,43 @@
     </nav>
     <div class="card">
       <h2>順位表</h2>
-      <p>
-        status == finished後、集計し、結果を掲載
-      </p>
+      <div class="controls">
+       <label>学年で絞り込み：</label>
+
+<div class="custom-select" id="gradeSelect">
+  <button type="button" class="custom-select-trigger" id="gradeSelectTrigger">
+    <span class="custom-select-label" id="gradeSelectLabel">すべて</span>
+    <span class="custom-select-arrow"></span>
+  </button>
+  <ul class="custom-select-dropdown" id="gradeSelectDropdown"></ul>
+</div>
+      </div>
+
+<div class="table-wrapper">
+  <table id="rankingTable">
+    <thead>
+      <tr>
+        <th style="text-align:center;">順位</th>
+        <th>ユーザー名</th>
+        <th>学年</th>
+        <th>総スコア</th>
+        <th>解いた問題数</th>
+      </tr>
+    </thead>
+    <tbody id="rankingBody">
+      <tr>
+        <td colspan="5" class="loading">
+          <span class="spinner"></span>読み込み中...
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+
     </div>
+
+    
   </main>
 
   <footer>
