--- a/tools/index.html
+++ b/tools/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/tools.css">
   <script src="/js/tools.js" defer></script>
+  <script src="/js/hamburger-menu.js" defer></script>
   <script type="module" src="/js/supabase-client.js"></script>
   <script type="module" src="/js/signup.js"></script>
 </head>
