--- a/contest/ranking/index.html
+++ b/contest/ranking/index.html
@@ -51,7 +51,7 @@
 
 <div class="custom-select" id="gradeSelect">
   <button type="button" class="custom-select-trigger" id="gradeSelectTrigger">
-    <span class="custom-select-label" id="gradeSelectLabel">すべて</span>
+    <span class="custom-select-label" id="gradeSelectLabel" data-value="">すべて</span>
     <span class="custom-select-arrow"></span>
   </button>
   <ul class="custom-select-dropdown" id="gradeSelectDropdown"></ul>
